welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: ')' expected but '=' found.
var (vuBiscuit:Boolean = false);
                       ^Program:14: error: '=' expected but '}' found.
}
^